# transformer-test

./: # Code Citations.md  CMakeLists.txt  EXPLICACION_VIT_MNIST.md  Makefile  README.md  last_chat.txt  logs.txt  logsv1.txt  loss.txt  plot_loss.py  test_simple.cu  training_loss.txt
data/: test.txt  train.txt
include/: common.cuh
scripts/: evaluate.sh  train.sh
src/: main.cu
src/data/: dataset.cu  dataset.cuh  mnist_loader.cuh  tsv_parser.cu  tsv_parser.cuh  vocab.cu  vocab.cuh
src/layers/: feed_forward.cu  feed_forward.cuh  layer_norm.cu  layer_norm.cuh  linear.cu  linear.cuh
src/training/: classification_loss.cu  classification_loss.cuh  loss.cu  loss.cuh  optimizer.cu  optimizer.cuh  trainer.cu  trainer.cuh
src/transformer/: attention.cu  attention.cuh  decoder.cu  decoder.cuh  embeddings.cu  embeddings.cuh  encoder.cu  encoder.cuh  transformer.cu  transformer.cuh  vision_transformer.cuh  vit_mnist.cu  vit_mnist.cuh
src/utils/: cuda_utils.cu  cuda_utils.cuh  mask_utils.cu  mask_utils.cuh  matrix.cu  matrix.cuh
